MDEV-21893: Assertion failure on upgrade with innodb_encrypt_log

recv_log_recover_10_4(): Add a missing bit pattern negation that
was forgotten when commit f8a9f906679e1d1ab026c245f7d24c652050d8b3
(MDEV-12353) removed the support for crash-upgrading.